--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Androme</string>
     <string name="swipe_gesture">Swipe Gesture</string>
+    <string name="app_drawer">App Drawer</string>
+    <string name="swipe_app">swipe_app</string>
 </resources>
